--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,8 @@ jobs:
 
     - name: Staging deploy
       run: |
-        az webapp deploy --name '${{ env.UNIQUE_APP_NAME }}/${{ env.UNIQUE_APP_NAME }}stg' \
+        az webapp deploy --name ${{ env.UNIQUE_APP_NAME }} \
+          --slot staging
           --resource-group ${{ env.AZURE_RESOURCE_GROUP_NAME  }} \
           --clean true --restart true \
           --type zip --src-path silo.zip --debug
