--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Staging deploy
       run: |
         az webapp deploy --name ${{ env.UNIQUE_APP_NAME }} \
-          --slot staging
+          --slot staging \
           --resource-group ${{ env.AZURE_RESOURCE_GROUP_NAME  }} \
           --clean true --restart true \
           --type zip --src-path silo.zip --debug
